compiler/src/test/resources/amyc/parser/passing/Literals.amy
module Literals
  1; (); ( ); "Hello"; true
end Literals
