compiler/src/test/resources/amyc/parser/failing/MissingOperand.amy
module Operand
  true || (x && )
end Operand
